# tooldaq-ups-build

./: CMakeLists.txt  README.md  tooldaq.cmake
ups/: product_deps
